fixed issue of aot task